# PacAvanture

./: .gitignore  CMakeLists.txt  Readme.md
docs/: checkpoint3_plan.md  checkpoints1_reflection.md  checkpoints1_tests.md  checkpoints2_plan.md  checkpoints2_reflection.md  checkpoints2_tests.md  checkpoints3_reflections.md  checkpoints_tests.md  final_reflection.md  implementation_plan.md
include/: Enemy.h  Game.h  InputHandler.h  Map.h  Player.h  fileHandler.h
src/: Enemy.cpp  FileHandler.cpp  Game.cpp  InputHandler.cpp  Map.cpp  Player.cpp  main.cpp
tests/: test_map.cpp  test_powerups.cpp  test_save.cpp
